--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -3,8 +3,14 @@ title: "Homework_3"
 output: pdf_document
 date: "2026-02-24"
 ---
-
+## Set up
 ```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(tidyverse) # reads in tidyverse package
+library(here) # reads in here package
+library(janitor) # reads in janitor package
+library(readxl) # reads in readxl package\
+
 
 ```
 
