--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -14,7 +14,7 @@ suppressPackageStartupMessages({
 # Stores the salinity data as an object called salinity
 salinity <- read.csv(here('data',"salinity-pickleweed.csv")) 
 # Stores my personal data as an object called my_data
-# my_data <- read.csv() xxx add later xxx 
+my_data <- read.csv(here('data',"193DS data - stress (3).csv")) 
 ```
 
 Here is my GitHub Repository: <https://github.com/samantha-gibson05/ENVS-193DS_homework-03>
@@ -125,3 +125,21 @@ In 1-3 sentences, describe whether or not the two tests would have led you to ma
 In your description, be specific about the tests, their components, and their relation to the variables.
 
 Yes, both Pearson’s r and Spearman’s $\rho$ reject the null hypothesis of no association (Pearson’s r = 0.53, t(21) = 2.9, p = 0.009, $\alpha$ = 0.05; Spearman's $\rho$ = 0.59, S = 824, p < 0.003, $\alpha$ = 0.05). Both tests indicate a moderate positive relationship between soil salinity (mS/cm) and pickleweed biomass (g). The Spearman result is slightly stronger which is consistent with the diagnostics showing mild heteroscedasticity.
+
+## Problem 2. Personal data
+### a. Updating your visualizations
+Revisit the visualizations you created in homework 2.
+
+Provide the code and output for *updated* plots with your most recent observations.
+
+Note: if you think that a *different* plot type or *different* variables would be more interesting to visualize, then change your plots!
+
+You should have the annotated code and output for *two* plots.
+
+For each plot, be sure to:
+
+- label the x- and y- axes and provide units
+- include the date of the most recent observation as a *subtitle*
+- clean up the visual clutter (e.g. grids, backgrounds)
+- use colors that are different from the `ggplot()` defaults
+
