--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -143,7 +143,7 @@ For each plot, be sure to:
 - clean up the visual clutter (e.g. grids, backgrounds)
 - use colors that are different from the `ggplot()` defaults
 
-**Visualization 2 (categorical predictor variable)**
+**Visualization 1 (categorical predictor variable)**
 ```{r}
 # Clean data
 my_data_clean <- my_data |> # starts with the raw personal dataset
@@ -216,3 +216,11 @@ ggplot(data = my_data_clean, # uses cleaned data
   theme_classic(base_size = 12) # cleaner theme
 ```
 
+### b. Captions
+In text (not in code), write captions for both your figures.
+
+**Figure 1. Time stressed varies across days of the week.** 
+Colored boxplots represent the distribution of daily time stressed (minutes) for each day of the week (Monday–Sunday). Boxes display the interquartile range (IQR), horizontal lines indicate medians, and whiskers extend to 1.5 times the IQR. Semi-transparent colored points represent individual daily observations which are jittered horizontally within each day to reduce overlap. The subtitle indicates the most recent observation included in the dataset. Data represent personal daily tracking records collected between January–February 2026 using an Oura ring .
+
+**Figure 2. Sleep duration is variably associated with daily stress levels.**
+Purple circles represent individual daily observations of time slept (minutes) plotted against time stressed (minutes). Each point corresponds to a single recorded day. The subtitle indicates the most recent observation included in the dataset. Data represent personal daily tracking records collected between January–February 2026 using an Oura ring .
