--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Homework_3"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
+  pdf_document: default
 date: "2026-02-24"
 ---
 # Set-up
