--- a/code/hw3_code.Rmd
+++ b/code/hw3_code.Rmd
@@ -250,3 +250,60 @@ An artist statement gives the audience context to understand your work. For each
 - the influences (what did techniques/artists/etc. did you find influential in creating your work?)
 - the form of your work (watercolor, oil painting, crocheted object, etc.)
 your process (how did you create your work?)
+
+### e. Prep your materials to share in class.
+In workshop week 9, you will present your draft and providing feedback on your learning partners’ drafts.
+
+To prepare for this, create a presentation on Google slides with:
+
+- one slide on:
+  - your project’s central question and why you wanted to ask that question
+  - the main variables (one response and one predictor) that you are measuring and how
+  - you think your predictor variable influences your response variable
+- one slide on:
+  - the other variables you measured and how each of them relate to your main variable
+- one slide depicting one of the two visualizations you made for homework 2, updated to include your new observations
+- one slide on:
+  - your idea for your affective visualization
+  - what inspiration you took from which sources
+  - the medium in which you will create your affective visualization
+- one slide on:
+  - your draft
+  - your anticipated artist statement
+  - the feedback that would be most helpful to you at this particular point (e.g. “I need help figuring out what other variables to depict and how”, “I think these colors work but I’m not sure - are there better ones?”)
+**In your homework submission, include a “View” link to your slides as a hyperlink.**
+
+## Problem 4. Statistical critique
+At this point, you have seen and created a lot of figures for this class. Revisit the paper you chose for your critique and your homework 2, where you described figures or tables in the text. Address the following in full sentences (3-4 sentences each).
+
+**For this section of your homework, you will be evaluated on the logic, conciseness, and nuance of your critique.**
+
+### a. Revisit and summarize
+What are the statistical tests the authors are using to address their main research question? (Note: you have already written about this in homework 2! Find that text and provide it again here!)
+
+Insert the figure or table you described in Homework 2 here.
+
+### b. Visual clarity
+In 2-4 sentences, answer the question that best fits your paper.
+
+If you inserted a figure in Part a: How clearly did the authors *visually* represent their statistics in figures? For example, are the x- and y-axes in a logical position? Do they show summary statistics (means and SE, for example) and/or model predictions, and if so, do they show the underlying data?
+
+If you inserted a table in Part b: How clearly does the table represent the data underlying tests?
+
+If you have neither: Critique another figure or table in the text for visual clarity (and insert a screenshot of that figure/table in your submission).
+
+### c. Aesthetic clarity
+In 2-4 sentences, answer the question that best fits your paper.
+
+If you inserted a figure in Part a: How well did the authors handle “visual clutter”? How would you describe the the data:ink ratio?
+
+If you inserted a table in Part b: How well did the authors handle “visual clutter”? Is there any bolding/italic text to draw your eye to specific numbers?
+
+If you have neither: Critique another figure or table in the text for aesthetic clarity (and insert a screenshot of that figure/table in your submission).
+
+Remember that data:ink ratio is not an actual ratio, but a way of thinking about the amount of visual clutter relative to the information being presented.
+
+### d. Recommendations
+In 2-4 sentences, outline what recommendations would you make to make the figure or table better. What would you take out, add, or change? Provide explanations/justifications for each of your recommendations.
+
+**Alternatively**, if the authors did not represent their statistics in a figure, what kind of figure would you recommend to them? Describe the x- and y-axes, with any geometries and aesthetics (colors, etc.). Provide enough explanation such that someone would be able to create the figure you describe in code. Provide explanations/justifications for the figure you would recommend.
